--- a/docs/about/01.站点说明.md
+++ b/docs/about/01.站点说明.md
@@ -25,20 +25,15 @@ Some **content** with _markdown_ `syntax`. Check [this `api`](#).
 
 
 
-## 你好吗？
-
-- 华为云
-
-- 阿里云
-  - 北京四
-  - 杭州
-  - 苏州
 
 
 
-> - 华为云
->
-> - 阿里云
->   - 北京四
->   - 杭州
->   - 苏州
+
+## 部署说明
+
+- [部署 | Docusaurus](https://docusaurus.io/zh-CN/docs/deployment#triggering-deployment-with-github-actions)
+- [docusaurus搭建博客，利用GitHub Actions自动部署GitHub Pages - 掘金](https://juejin.cn/post/6936846407051509774)
+
+
+
+- 参考站点：[yingwinwin/yingwinwin.github.io: 一个前端菜鸟的自我救赎之路...](https://github.com/yingwinwin/yingwinwin.github.io) | [yingwinwin.github.io/](https://yingwinwin.github.io/)
