--- a/docs/about/说明.md
+++ b/docs/about/说明.md
@@ -3,7 +3,7 @@ id: readme
 ---
 :::tip
 
-Some **content** with _markdown_ `syntax`. Check [this `api`](#).
+这里是文档的一些初始化信息
 
 :::
 
@@ -11,7 +11,7 @@ Some **content** with _markdown_ `syntax`. Check [this `api`](#).
 
 - 官方文档：[安装 | Docusaurus](https://docusaurus.io/zh-CN/docs/installation)
 
-- emoji：[Emoji大全 | Emoji表情符号词典 📓 | EmojiAll中文官方网站](https://www.emojiall.com/zh-hans)
+- 这里是表情符号词典 📓 | EmojiAll中文官方网站](https://www.emojiall.com/zh-hans)
 - [主题初衷与诞生 | vuepress-theme-vdoing](https://doc.xugaoyi.com/pages/52d5c3/#markdown)
 
 - 搜索插件：[easyops-cn/docusaurus-search-local: Offline/local search for Docusaurus v2](https://github.com/easyops-cn/docusaurus-search-local)
@@ -33,5 +33,7 @@ Some **content** with _markdown_ `syntax`. Check [this `api`](#).
 
 - [部署 | Docusaurus](https://docusaurus.io/zh-CN/docs/deployment#triggering-deployment-with-github-actions)
 - [docusaurus搭建博客，利用GitHub Actions自动部署GitHub Pages - 掘金](https://juejin.cn/post/6936846407051509774)
-
-- 参考站点：[yingwinwin/yingwinwin.github.io: 一个前端菜鸟的自我救赎之路...](https://github.com/yingwinwin/yingwinwin.github.io) | [yingwinwin.github.io/](https://yingwinwin.github.io/)
+- 参考站点：
+  - yingwinwin/yingwinwin.github.io
+    - 仓库：[yingwinwin/yingwinwin.github.io: 一个前端菜鸟的自我救赎之路...](https://github.com/yingwinwin/yingwinwin.github.io)
+    - 在线预览：[yingwinwin.github.io/](https://yingwinwin.github.io/)
