--- a/docs/frontend/es6/02-es2015/02-解构赋值.md
+++ b/docs/frontend/es6/02-es2015/02-解构赋值.md
@@ -21,7 +21,7 @@ TIP
 
 是不是非常的简洁，在解构赋值里用的最多的就是 Object 和 Array ，我们可以分别来看下两者的解构赋值是如何操作的。
 
-## [#](http://es.xiecheng.live/es6/destructuring.html#数组解构赋值)数组解构赋值
+## 数组解构赋值
 
 上述的小示例已经在描述数组的解构赋值了，可是那只是开始。
 
@@ -123,7 +123,7 @@ TIP
   console.log(surname) // Anonymous (default used)
   ```
 
-## [#](http://es.xiecheng.live/es6/destructuring.html#对象解构赋值)对象解构赋值
+## 对象解构赋值
 
 - **基本用法**
 
@@ -232,7 +232,7 @@ let {width: w, height: h, title} = options
 
   ![img](assets/destructuring-complex@2x.9f75fc55.png)
 
-## [#](http://es.xiecheng.live/es6/destructuring.html#字符串解构赋值)字符串解构赋值
+## 字符串解构赋值
 
 可以当做是数组的解构:
 
@@ -244,12 +244,12 @@ let [a, b, c, d, e] = str
 console.log(a, b, c, d, e)
 ```
 
-### [#](http://es.xiecheng.live/es6/destructuring.html#思考)思考
+### 思考
 
 1. 有时候我们写一个函数需要传入很多参数，而且很多参数是可选的，是否可以利用解构赋值来简化操作呢？
 2. 如何在业务开发中对接口数据进行解构赋值呢？
 
-### [#](http://es.xiecheng.live/es6/destructuring.html#推荐阅读)推荐阅读
+### 推荐阅读
 
 - [Destructuring Assignment](https://www.sitepoint.com/es6-destructuring-assignment/)
 - [ES6 JavaScript Destructuring in Depth](https://ponyfoo.com/articles/es6-destructuring-in-depth)
