--- a/docs/frontend/es6/01-项目准备/01-前言.md
+++ b/docs/frontend/es6/01-项目准备/01-前言.md
@@ -1,4 +1,4 @@
-![img](http://es.xiecheng.live/assets/img/ecmascript.ce0de15e.jpg)
+![img](assets/ecmascript.ce0de15e-164657786779617.jpg)
 
 ​    JavaScript是世界上发展最快的编程语言之一，不仅可以用于编写运行在浏览器的客户端程序，随着Node.js的发展，JavaScript也被广泛应用于编写服务端程序。而随着JavaScript这门语言的不断发展和完善，在2015年正式发布的ECMAScript6（2015）已经成为了JavaScript这门语言的下一代标准，使得JavaScript用来编写复杂的大型应用程序更加的得心应手。近几年几乎所有使用JavaScript这门语言开发的项目，都在使用ES的新特性来开发。
 
