--- a/docs/tools/正则表达式.md
+++ b/docs/tools/正则表达式.md
@@ -3,7 +3,7 @@
 | 符号 | 描述             | 例子   | 能匹配   | 不能匹配 |
 | ---- | ---------------- | ------ | -------- | -------- |
 | ^    | 行首或字符串开始 | ^yo    | yo       | ayo      |
-| $    | 行末或字符串结束 | yo$    | yo       | yop      |
+| $    | 行末或字符串结束 | yo$    | yo       | yop      |||
 | \b   | 单词边界         | \byo\b | mu yo mu | muyomu   |
 | \B   | 非单词边界       | \Byo\B | muyomu   | mu yo mu |
 
@@ -18,14 +18,14 @@
 | ----- | --------------------------- | ------ | ------------- | -------- |
 | [ ]   | 字符集合                    | [ace]  | a, c, e       | d        |
 | [ - ] | 字符范围                    | [a-c]  | a, b, c       | d        |
-| [^ ]  | 不包含的字符集合            | [^abc] | d, e          | a, b, c  |
+| [^ ]  | 不包含的字符集合            | `[^abc]` | d, e          | a, b, c  |
 | .     | 匹配除断行外的任何字符      | yo.    | yoo, yop, yoh | yo       |
-| \s    | 空白字符，等于[\n\r\f\t ]   | la\sla | la la         | lala     |
-| \S    | 非空白字符，等于[^\n\r\f\t] | la\sla | lala          | la la    |
+| \s    | 空白字符，等于 `[\n\r\f\t ]` | la\sla | la la         | lala     |
+| \S    | 非空白字符，等于`[^\n\r\f\t]` | la\sla | lala          | la la    |
 | \d    | 数字                        | \d{2}  | 23            | 1a       |
 | \D    | 非数字                      | \D{3}  | yoo, abc      | yo1      |
-| \w    | 单词，等于[a-z-A-Z0-9_]     | \w{4}  | v123          | v12.3    |
-| \W    | 非单词，等于[^a-z-A-Z0-9_]  | .$%?   | .$%?          | .ab?     |
+| \w    | 单词，等于 `[a-z-A-Z0-9_]` | \w{4}  | v123          | v12.3    |
+| \W    | 非单词，等于 `[^a-z-A-Z0-9_]` | .$%?   | .$%?          | .ab?     ||
 
 | 特殊字符 | 描述       |
 | -------- | ---------- |
