--- a/docs/about/说明.md
+++ b/docs/about/说明.md
@@ -10,7 +10,7 @@ id: readme
 
 
 - 官方文档：[安装 | Docusaurus](https://docusaurus.io/zh-CN/docs/installation)
-- 这里是表情符号词典 📓 | EmojiAll中文官方网站](https://www.emojiall.com/zh-hans)
+- 这里是表情符号词典 [📓 | EmojiAll中文官方网站](https://www.emojiall.com/zh-hans)
 - [主题初衷与诞生 | vuepress-theme-vdoing](https://doc.xugaoyi.com/pages/52d5c3/#markdown)
 - 搜索插件：[easyops-cn/docusaurus-search-local: Offline/local search for Docusaurus v2](https://github.com/easyops-cn/docusaurus-search-local)
   - 代码示例：[easyops-cn/docusaurus-search-example: An example for @easyops-cn/docusaurus-search-local](https://github.com/easyops-cn/docusaurus-search-example)
