--- a/docs/tools/01.Visual Studio Code.md
+++ b/docs/tools/01.Visual Studio Code.md
@@ -1,6 +1,10 @@
-# Visual Studio Code 插件
+# Visual Studio Code
 
-## 1. 编辑多行，插入递增数字
+## 插件
+
+### 1. Increment Selection
+
+>  编辑多行，插入递增数字
 
 插件市场：[Increment Selection - Visual Studio Marketplace](https://marketplace.visualstudio.com/items?itemName=albymor.increment-selection)
 
@@ -18,7 +22,7 @@ cmd + shift + P => Increment Selection
 
 
 
-## 2. Sort line
+### 2. Sort line
 
 
 
