--- a/docs/tools/01.Visual Studio Code.md
+++ b/docs/tools/01.Visual Studio Code.md
@@ -26,3 +26,11 @@ cmd + shift + P => Increment Selection
 
 
 
+
+
+### 3. Svg Preview - Visual Studio Marketplace
+
+SVG 图片预览插件：[Svg Preview - Visual Studio Marketplace](https://marketplace.visualstudio.com/items?itemName=SimonSiefke.svg-preview)
+
+![image-20220401205142396](assets/image-20220401205142396.png)
+
