--- a/docs/04.tools/01.Visual Studio Code.md
+++ b/docs/04.tools/01.Visual Studio Code.md
@@ -22,6 +22,11 @@ cmd + shift + P => Increment Selection
 
 
 
+vscode同时编辑多行，插入递增数字_winters_song的博客-CSDN博客_vscode 自增
+https://blog.csdn.net/winters_song/article/details/90719829
+
+
+
 ### 2. Sort line
 
 
@@ -33,4 +38,26 @@ cmd + shift + P => Increment Selection
 SVG 图片预览插件：[Svg Preview - Visual Studio Marketplace](https://marketplace.visualstudio.com/items?itemName=SimonSiefke.svg-preview)
 
 ![image-20220401205142396](assets/image-20220401205142396.png)
+
+
+
+### 4. Markdown Padding - Visual Studio Marketplace
+
+修复 Markdown 中的混排空格：中英文、数字、链接等：[Markdown Padding - Visual Studio Marketplace](https://marketplace.visualstudio.com/items?itemName=harttle.md-padding-vscode)
+
+
+
+harttle/md-padding: 修复 Markdown 中的混排空格：中英文、数字、链接等。
+https://github.com/harttle/md-padding
+
+
+
+
+
+## 快捷键
+
+### 大小写转换
+
+VS Code 如何设置大小写转换快捷键 - SegmentFault 思否
+https://segmentfault.com/a/1190000041205771
 
