--- a/docs/04.tools/01.Visual Studio Code.md
+++ b/docs/04.tools/01.Visual Studio Code.md
@@ -52,6 +52,16 @@ https://github.com/harttle/md-padding
 
 
 
+## 5. GitHub Copilot
+
+GitHub Copilot - Visual Studio Marketplace
+https://marketplace.visualstudio.com/items?itemName=GitHub.copilot
+
+
+
+GitHub Copilot · Your AI pair programmer
+https://copilot.github.com/
+
 
 
 ## 快捷键
