--- a/docs/05.about/01.说明.md
+++ b/docs/05.about/01.说明.md
@@ -38,3 +38,44 @@ id: readme
   - yingwinwin/yingwinwin.github.io
     - 仓库：[yingwinwin/yingwinwin.github.io: 一个前端菜鸟的自我救赎之路...](https://github.com/yingwinwin/yingwinwin.github.io)
     - 在线预览：[yingwinwin.github.io/](https://yingwinwin.github.io/)
+
+
+
+
+
+## LF ERROR
+
+markdown h1 header render error on windows and macos · Issue #7120 · facebook/docusaurus
+
+https://github.com/facebook/docusaurus/issues/7120
+
+You should change all your CRLF to LF for the time being. In vs code the config is at the bottom right.
+
+Windows将CRLF格式转换为LF格式（vscode）_七侠剑客的博客-程序员宅基地_crlf转lf - 程序员宅基地
+https://www.cxyzjd.com/article/qq_36727756/105164225
+
+vscode如何替换所有文件的回车格式为LF呢？ - H5W3
+https://www.h5w3.com/188967.html
+
+vscode解决 windows换行crlf与lf冲突 - 代码先锋网
+
+https://www.codeleading.com/article/28155040906/
+
+vscode解决windows换行CRLF与LF冲突 - 掘金
+
+https://juejin.cn/post/7050347374840905736
+
+
+
+```
+
+git config --global core.autocrlf
+
+git config --global core.autocrlf false
+
+```
+
+- 在 vsc 里面做全局替换
+
+  ```
+  \r\n -> \n
