--- a/docs/04.tools/02.IntelliJ IDEA.md
+++ b/docs/04.tools/02.IntelliJ IDEA.md
@@ -32,3 +32,12 @@ Shift+Alt+F
 # 选中相同的内容
 Alt+J / CTRL + ALT + SHIFT + J
 ```
+
+
+
+选中文件中所有相同个的内容：command + ctrl + G
+
+多行编辑，
+
+option + shift + 鼠标左键
+
