--- a/docs/04.tools/mac/03. 优质网站.md
+++ b/docs/04.tools/mac/03. 优质网站.md
@@ -386,7 +386,7 @@ shuttle : [A simple SSH shortcut menu for OS X](https://link.zhihu.com/?target=h
 
 putty : [https://www.ssh.com/ssh/putty/mac/#sec-Using-the-built-in-SSH-client-in-Mac-OS-X](https://link.zhihu.com/?target=https%3A//www.ssh.com/ssh/putty/mac/%23sec-Using-the-built-in-SSH-client-in-Mac-OS-X)
 
-[termius]() : [Termius](https://link.zhihu.com/?target=https%3A//www.termius.com/)
+termius : [Termius](https://link.zhihu.com/?target=https%3A//www.termius.com/)
 
 electerm : [electerm/electerm](https://link.zhihu.com/?target=https%3A//github.com/electerm/electerm)
 
