--- a/docs/04.tools/mac/00. 使用指南.md
+++ b/docs/04.tools/mac/00. 使用指南.md
@@ -1,1 +1,11 @@
--- 
+## 基础快捷键
+
+新建文件夹：shift + command + n
+
+
+
+## 进阶快捷键
+
+- 叠放操作：control + command + 0
+- 快速跳出备忘录：fn + q
+- 用所选项目新建的文件夹：control + command + n
