--- a/docs/04.tools/mac/00. 使用指南.md
+++ b/docs/04.tools/mac/00. 使用指南.md
@@ -4,8 +4,33 @@
 
 
 
+## 文本编辑
+
+Ctrl+A：到行首（达到Home键的效果）
+
+Ctrl+E：到行尾（达到End键的效果）
+
+Ctrl+N：到下一行
+
+Ctrl+P：到上一行
+
+Ctrl+K：从光标处开始删除，直到行尾
+
+fn键+左方向键是HOME
+
+fn键+右方向键是END
+
+fn+上方向键是page up
+
+fn+下方向键是page down
+
+
+
+
+
 ## 进阶快捷键
 
-- 叠放操作：control + command + 0
-- 快速跳出备忘录：fn + q
+- 叠放/使用群组-切换：control + command + 0
+- 快速备忘录：fn + q
 - 用所选项目新建的文件夹：control + command + n
+- 复制文件路径：option + command + c
