调整目录结构

--- a/docs/04.tools/07.Kubesphere 安装.md
+++ b/docs/04.tools/07.Kubesphere 安装.md
@@ -93,8 +93,6 @@ yum install socat -y
 
 
 
-
-
 安装集群
 
 ```shell
@@ -106,4 +104,56 @@ yum install socat -y
 ```shell
 kubectl logs -n kubesphere-system $(kubectl get pod -n kubesphere-system -l 'app in (ks-install, ks-installer)' -o jsonpath='{.items[0].metadata.name}') -f
 ```
+
+
+
+## 开启 ServiceMesh
+
+蓝绿部署
+https://kubesphere.io/zh/docs/v3.3/project-user-guide/grayscale-release/blue-green-deployment/#%E5%88%9B%E5%BB%BA%E8%93%9D%E7%BB%BF%E9%83%A8%E7%BD%B2%E4%BB%BB%E5%8A%A1
+
+
+
+KubeSphere 服务网格
+https://kubesphere.io/zh/docs/v3.3/pluggable-components/service-mesh/
+
+
+
+### servicemesh
+
+```shell
+servicemesh:
+enabled: true # 将“false”更改为“true”。
+istio: # Customizing the istio installation configuration, refer to https://istio.io/latest/docs/setup/additional-setup/customize-installation/
+  components:
+    ingressGateways:
+    - name: istio-ingressgateway # 将服务暴露至服务网格之外。默认不开启。
+      enabled: false
+    cni:
+      enabled: false # 启用后，会在 Kubernetes pod 生命周期的网络设置阶段完成 Istio 网格的 pod 流量转发设置工作。
+```
+
+查看安装结果
+
+```shell
+kubectl logs -n kubesphere-system $(kubectl get pod -n kubesphere-system -l 'app in (ks-install, ks-installer)' -o jsonpath='{.items[0].metadata.name}') -f
+```
+
+
+
+### logging
+
+```shell
+logging:
+  enabled: true # 将“false”更改为“true”。
+  containerruntime: docker
+```
+
+查看安装结果
+
+```shell
+kubectl logs -n kubesphere-system $(kubectl get pod -n kubesphere-system -l 'app in (ks-install, ks-installer)' -o jsonpath='{.items[0].metadata.name}') -f
+```
+
+
 
