--- a/docs/04.tools/07.Kubesphere 安装.md
+++ b/docs/04.tools/07.Kubesphere 安装.md
@@ -74,13 +74,13 @@ unzip kubekey.zip
 
 ## 安装 kubesphere
 
-设置 Region
+### 设置 Region
 
 ```
 export KKZONE=cn
 ```
 
-安装依赖
+### 安装依赖
 
 ```
 
@@ -93,13 +93,13 @@ yum install socat -y
 
 
 
-安装集群
+### 安装集群
 
 ```shell
 ./kk create cluster --with-kubernetes v1.22.12 --with-kubesphere v3.3.1 -y
 ```
 
-验证安装结果
+### 验证安装结果
 
 ```shell
 kubectl logs -n kubesphere-system $(kubectl get pod -n kubesphere-system -l 'app in (ks-install, ks-installer)' -o jsonpath='{.items[0].metadata.name}') -f
