--- a/docs/04.tools/07.Kubesphere 安装.md
+++ b/docs/04.tools/07.Kubesphere 安装.md
@@ -4,7 +4,7 @@ Migrate from GitHub to jsDelivr
 
 
 
-
+## yum 镜像源修改
 
 centos镜像_centos下载地址_centos安装教程-阿里巴巴开源镜像站
 https://developer.aliyun.com/mirror/centos?spm=a2c6h.13651102.0.0.3e221b116cz6iL
