--- a/docs/04.tools/12.快乐的Linux命令行/02.常用的 Linux 命令行.md
+++ b/docs/04.tools/12.快乐的Linux命令行/02.常用的 Linux 命令行.md
@@ -35,11 +35,22 @@ tar zcvf kubekey.tar.gz ./kubekey
 
 
 
-
-
 ## unzip
 
 ```
 unzip zipped_file.zip
 ```
 
+
+
+
+
+## 使用技巧
+
+### 1. Linux下快速删除输错的密码技巧（快速删除输入的命令）
+
+1、【Esc】+【退格键（Backspace）】
+
+2、【Ctrl】+【U】
+
+说明：以上两个快捷键都会删除全部输错的命令或密码。
