--- a/docs/03.frontend/es6/08-实战项目/01-初始化环境.md
+++ b/docs/03.frontend/es6/08-实战项目/01-初始化环境.md
@@ -54,7 +54,23 @@ TIP
 
 命令中的 `imooc-es-vue` 表示项目名称，大家可以根据自己的喜好来起名字，但名称中不要带有中文哦。
 
-![img](assets/1.e3b18df5.png) ![img](assets/2.e13e6ab4.png) ![img](http://es.xiecheng.live/assets/img/3.e4dfe0db.png) ![img](assets/4.18b5e98a.png) ![img](assets/5.47b9127d.png) ![img](assets/6.196f41cc.png) ![img](http://es.xiecheng.live/assets/img/7.190a7f83.png) ![img](assets/8.45134d0d.png) ![img](assets/9.7c3916a0.png)
+![img](assets/1.e3b18df5.png)
+
+![img](assets/2.e13e6ab4.png)
+
+![img](assets/3.e4dfe0db.png)
+
+ ![img](assets/4.18b5e98a.png)
+
+ ![img](assets/5.47b9127d.png)
+
+ ![img](assets/6.196f41cc.png)
+
+ ![img](assets/7.190a7f83.png)
+
+ ![img](assets/8.45134d0d.png)
+
+ ![img](assets/9.7c3916a0.png)
 
 ### 进入项目
 
@@ -68,7 +84,7 @@ cd imooc-es-vue
 npm run serve
 ```
 
-项目启动起来以后，大家可以在终端中看到项目的地址，然后在浏览器中打开这个地址。 ![img](http://es.xiecheng.live/assets/img/10.745e0a9e.png)
+项目启动起来以后，大家可以在终端中看到项目的地址，然后在浏览器中打开这个地址。 ![img](assets/10.745e0a9e.png)[]()
 
 注意
 
@@ -76,8 +92,8 @@ npm run serve
 
 如果顺利看到这个页面，说明项目已经成功运行起来了。
 
-![img](http://es.xiecheng.live/assets/img/11.d87b8e75.png)
+![img](assets/11.d87b8e75.png)
 
 ## VSCode 插件
 
-![img](http://es.xiecheng.live/assets/img/12.bdd1001c.png)
+![img](assets/12.bdd1001c.png)
