--- a/docs/03.frontend/es6/08-实战项目/01-初始化环境.md
+++ b/docs/03.frontend/es6/08-实战项目/01-初始化环境.md
@@ -84,7 +84,8 @@ cd imooc-es-vue
 npm run serve
 ```
 
-项目启动起来以后，大家可以在终端中看到项目的地址，然后在浏览器中打开这个地址。 ![img](assets/10.745e0a9e.png)[]()
+项目启动起来以后，大家可以在终端中看到项目的地址，然后在浏览器中打开这个地址。 
+![](assets/10.745e0a9e.png)
 
 注意
 
