--- a/docs/03.frontend/mini-program/小程序基础笔记/05-小程序模板语法.md
+++ b/docs/03.frontend/mini-program/小程序基础笔记/05-小程序模板语法.md
@@ -431,9 +431,9 @@ Page({
 >
 > 简易双向绑定的属性值如下限制：
 >
-> 1. 只能是一个单一字段的绑定，例如：错误用法：<input model:value="值为 {{value}}" />
+> 1. 只能是一个单一字段的绑定，例如：错误用法：`<input model:value="值为 {{value}}" />`
 >
-> 2. 尚不能写 data 路径，也就是不支持数组和对象，例如：错误用法：<input model:value="{{ a.b }}" />
+> 2. 尚不能写 data 路径，也就是不支持数组和对象，例如：错误用法：`<input model:value="{{ a.b }}" />`
 
 
 
